Add the webfonts files and working on header and landing sections

--- a/index.html
+++ b/index.html
@@ -5,20 +5,63 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Normalize CSS for rendering all elements normally-->
-    <link rel="stylesheet" href="css/normalize.css">
     <!-- Font Awesome Library -->
-    <link rel="stylesheet" href="css/all.min.css">
-    <!-- Main CSS File -->
-    <link rel="stylesheet" href="css/master.css">
-    <!-- Google Fonts | Work Sans | Roboto  -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700;900&family=Work+Sans:wght@200;300;400;600;700;900&display=swap" rel="stylesheet">
-    <title>Hotel Reservation WebSite</title>
+     <!-- Render All Elements Normally -->
+     <link rel="stylesheet" href="css/normalize.css">
+     <!-- Font Awesome Library -->
+     <link rel="stylesheet" href="css/all.min.css">
+     <!-- Main Template CSS Files -->
+     <link rel="stylesheet" href="css/master.css">
+     <!-- Google font | Open Sans -->
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700;900&family=Work+Sans:wght@200;300;400;600;700;900&display=swap" 
+      rel="stylesheet">
+     <title>Hotel Reservation | School Project</title>
 </head>
 <body>
     <!-- Start Header -->
+     <div class="header">
+        <div class="container">
+           <a href="index.html">Hotello</a>
+            <nav>
+                <ul>
+                    <li ><a class="active" href="#Home">Home</a></li>
+                    <li><a href="#">Destinations</a>
+                        <ul>
+                            <li><a href="#">Destination1</a></li>
+                            <li><a href="#">Destination2</a></li>
+                            <li><a href="#">Destination3</a>
+                                <ul>
+                                    <li><a href="#">Option1</a></li>
+                                    <li><a href="#">Option2</a></li>
+                                    <li><a href="#">Option3</a></li>
+                                </ul>
+                            </li>
+                            
+                        </ul>
+                    </li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+            <div class="phone">
+                <span class="icon"></span>
+                <span>+216-1234-5678</span>
+            </div>
+        </div>
+    </div>
     <!-- End Header -->
+    <!-- Start Landing -->
+    <div class="landing">
+        <div class="overlay"></div>
+        <h1>Once a year go someplace you've never been before</h1>
+        <div class="button">
+            <a href="#Home">See video</a>
+        </div>
+    </div> 
+    <!-- End Landing -->
     <!-- Start Services -->
     <!-- End Services -->
     <!-- Start About -->
