Adding some addition to the header and making responsive changes

--- a/index.html
+++ b/index.html
@@ -23,24 +23,12 @@
     <!-- Start Header -->
      <div class="header">
         <div class="container">
-           <a href="index.html">Hotello</a>
+            <a href="index.html">Hotello</a>
             <nav>
+                <i class="fas fa-bars toggle-menu"></i>
                 <ul>
                     <li ><a class="active" href="#Home">Home</a></li>
-                    <li><a href="#">Destinations</a>
-                        <ul>
-                            <li><a href="#">Destination1</a></li>
-                            <li><a href="#">Destination2</a></li>
-                            <li><a href="#">Destination3</a>
-                                <ul>
-                                    <li><a href="#">Option1</a></li>
-                                    <li><a href="#">Option2</a></li>
-                                    <li><a href="#">Option3</a></li>
-                                </ul>
-                            </li>
-                            
-                        </ul>
-                    </li>
+                    <li><a href="#">Destinations</a></li>
                     <li><a href="#">Services</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Contact</a></li>
@@ -56,7 +44,7 @@
     <!-- Start Landing -->
     <div class="landing">
         <div class="overlay"></div>
-        <h1>Once a year go someplace you've never been before</h1>
+        <div class="text"><h1>Once a year go someplace you've never been before</h1></div>
         <div class="button">
             <a href="#Home">See video</a>
         </div>
