--- a/index.html
+++ b/index.html
@@ -50,6 +50,27 @@
         </div>
     </div> 
     <!-- End Landing -->
+    <!-- Start Reservation -->
+    <div class="reservation">
+        <div class="container">
+            <div class="form">
+                <form action="">
+                    <input class="special-input" type="date" placeholder="Date Arrival">
+                    <input class="special-input" type="date" placeholder="Date Departure">
+                    <select class="special-input" name="persons">
+                        <option value=""># of Person</option>
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5+">5+</option>
+                    </select>
+                    <input type="submit" value="Find now">
+                </form>
+            </div>
+        </div>
+    </div>
+    <!-- End Reservation -->
     <!-- Start Services -->
     <!-- End Services -->
     <!-- Start About -->
@@ -62,6 +83,8 @@
     <!-- End Testimonials -->
     <!-- Start Insta -->
     <!-- End Insta -->
+    <!-- Start Contact -->
+    <!-- End Contact -->
     <!-- Start Footer -->
     <!-- End Footer -->
 </body>
