--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <option value="4">4</option>
                         <option value="5+">5+</option>
                     </select>
-                    <input type="submit" value="Find now">
+                    <input type="submit" value="Book NOW">
                 </form>
             </div>
         </div>
@@ -201,16 +201,50 @@
       </div>
     </div>
     <!-- End Galery -->
+    <!-- Start Services -->
+    <div class="services" id="services">
+      <h2 class="main-title">Our Services</h2>
+      <div class="container">
+        <div class="box room">
+          <div class="img-holder">
+            <img src="/imgs/hotel-ge066d36b7_1920.jpg" alt="">
+          </div>
+          <h2>Rooms</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Odit harum hic veniam eligendi minima
+          </p>
+          <a href="#">More</a>
+        </div>
+        <div class="box rest">
+          <div class="img-holder">
+            <img src="/imgs/villa-cortine-palace-g3ab582292_1920.jpg" alt="">
+          </div>
+          <h2>Restaurants</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Odit harum hic veniam eligendi minima
+          </p>
+          <a href="#">More</a>
+        </div>
+        <div class="box pool">
+          <div class="img-holder">
+            <img src="/imgs/water-165219.jpg" alt="">
+          </div>
+          <h2>Pools</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Odit harum hic veniam eligendi minima
+          </p>
+          <a href="#">More</a>
+        </div>
+      </div>
+    </div>
+    <!-- End Services -->
     <!-- Start About -->
+    
     <!-- End About -->
-    <!-- Start Blog -->
-    <!-- End Blog -->
-    <!-- Start FAQ -->
-    <!-- End FAQ -->
-    <!-- Start Testimonials -->
-    <!-- End Testimonials -->
-    <!-- Start Insta -->
-    <!-- End Insta -->
+    
     <!-- Start Contact -->
     <!-- End Contact -->
     <!-- Start Footer -->
