add some simple changes

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
       <div class="container">
         <div class="box room">
           <div class="img-holder">
-            <img src="/imgs/hotel-ge066d36b7_1920.jpg" alt="">
+            <img src="imgs/room.jpg" alt="">
           </div>
           <h2>Rooms</h2>
           <p>
@@ -218,7 +218,7 @@
         </div>
         <div class="box rest">
           <div class="img-holder">
-            <img src="/imgs/villa-cortine-palace-g3ab582292_1920.jpg" alt="">
+            <img src="imgs/rest.jpg" alt="">
           </div>
           <h2>Restaurants</h2>
           <p>
@@ -229,7 +229,7 @@
         </div>
         <div class="box pool">
           <div class="img-holder">
-            <img src="/imgs/water-165219.jpg" alt="">
+            <img src="imgs/pool.jpg" alt="">
           </div>
           <h2>Pools</h2>
           <p>
