--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <ul>
                     <li ><a class="active" href="#Home">Home</a></li>
                     <li><a href="#tours">Destinations</a></li>
-                    <li><a href="#">Services</a></li>
+                    <li><a href="#services">Services</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
