--- a/index.html
+++ b/index.html
@@ -242,10 +242,26 @@
     </div>
     <!-- End Services -->
     <!-- Start About -->
-    
     <!-- End About -->
-    
     <!-- Start Contact -->
+    <div class="contact" id="contact">
+      <h2 class="main-title">Contact US</h2>
+      <div class="container">
+        <p>Directly contact us by completing the form below <br> (<span>*</span> <b> -</b>  mandatory fields)</p>
+        <form action="">
+          <div class="flex-part">
+            <input type="text" name="name" id="name" placeholder="Name" required>
+            <input type="text" name="email" id="email" placeholder="Email Address" required>
+            <textarea name="message" id="message" placeholder="Message" required></textarea>
+          </div>
+          <div class="normal-part">
+            <span>New Field</span> <br>
+            <input type="checkbox" name="checkpolicy" class="ck" id="checkpolicy"><span>I agree to the Hotello <a href="#">Privacy Policy</a></span> 
+            <input type="submit" value="SEND">
+          </div>
+        </form>
+      </div>
+    </div>
     <!-- End Contact -->
     <!-- Start Footer -->
     <!-- End Footer -->
