--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
                 <ul>
                     <li ><a class="active" href="#Home">Home</a></li>
                     <li><a href="#tours">Destinations</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
             <div class="phone">
@@ -43,9 +43,8 @@
     <div class="landing">
         <div class="overlay"></div>
         <div class="text"><h1>Once a year go someplace you've never been before</h1></div>
-        <div class="button">
-            <a href="#Home">See video</a>
-        </div>
+        <a href="#Home">See video</a>
+        
     </div> 
     <!-- End Landing -->
     <!-- Start Reservation -->
