--- a/index.html
+++ b/index.html
@@ -31,14 +31,8 @@
                     <li ><a class="active" href="#Home">Home</a></li>
                     <li><a href="#tours">Destinations</a></li>
                     <li><a href="#services">Services</a></li>
-<<<<<<< HEAD
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Contact</a></li>
-
-=======
                     <li><a href="#about">About</a></li>
                     <li><a href="#contact">Contact</a></li>
->>>>>>> ba2829368de89c38373e7b2b480f26a60b4d85c7
                 </ul>
             </nav>
             <div class="phone">
@@ -336,6 +330,39 @@
     
     
   
+<script>
+const form = document.querySelector("#contact form");
+const nameInput = document.querySelector("#name");
+const emailInput = document.querySelector("#email");
+const messageInput = document.querySelector("#message");
+const checkbox = document.querySelector("#checkpolicy");
 
+form.addEventListener("submit", (event) => {
+  // Check if name, email, and message fields are filled
+  if (!nameInput.value.trim() || !emailInput.value.trim() || !messageInput.value.trim()) {
+    event.preventDefault();
+    alert('Please fill in all required fields.');
+  }
+
+  // Check email format
+  const emailPattern = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
+  if (!emailPattern.test(emailInput.value)) {
+    alert("Please enter a valid email address.");
+    event.preventDefault();
+    return;
+  }
+
+  // Check if checkbox is checked
+  if (!checkbox.checked) {
+    alert("Please accept the privacy policy.");
+    event.preventDefault();
+    return;
+  }
+
+  // Form is valid, submit it
+  alert("Form submitted successfully!");
+});
+
+</script>
 </body>
 </html>
