complete the services section addition

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <!-- Start Landing -->
     <div class="landing">
       <div id="background-vd">
-        <video  autoplay muted loop >
+        <video decoding="async"  autoplay muted loop >
           <source src="imgs/tunisia-video.mp4" type="video/mp4">
         </video>
       </div>
@@ -456,7 +456,21 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit.
             Odit harum hic veniam eligendi minima
           </p>
-          <a href="#">More</a>
+          <a id="slide-room">More</a>
+          <div class="slider" id="room">
+            <div class="overlay"></div>
+            <h2>Rooms</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Odit harum hic veniam eligendi minima
+            </p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+              Enim a sit, asperiores excepturi debitis, aliquid praesentium 
+              quis natus fugit repellat illum quos rerum
+               maiores. Tenetur a officiis alias eum facilis.
+            </p>
+            <a id="slide-room-less">Less</a>
+          </div>
         </div>
         <div class="box rest">
           <div class="img-holder">
@@ -467,7 +481,21 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit.
             Odit harum hic veniam eligendi minima
           </p>
-          <a href="#">More</a>
+          <a id="slide-rest">More</a>
+          <div class="slider" id="rest">
+            <div class="overlay"></div>
+            <h2>Restaurants</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Odit harum hic veniam eligendi minima
+            </p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+              Enim a sit, asperiores excepturi debitis, aliquid praesentium 
+              quis natus fugit repellat illum quos rerum
+               maiores. Tenetur a officiis alias eum facilis.
+            </p>
+            <a id="slide-rest-less">Less</a>
+          </div>
         </div>
         <div class="box pool">
           <div class="img-holder">
@@ -478,7 +506,21 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit.
             Odit harum hic veniam eligendi minima
           </p>
-          <a href="#">More</a>
+          <a id="slide-pool">More</a>
+          <div class="slider" id="pool">
+            <div class="overlay"></div>
+            <h2>Pools</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Odit harum hic veniam eligendi minima
+            </p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+              Enim a sit, asperiores excepturi debitis, aliquid praesentium 
+              quis natus fugit repellat illum quos rerum
+               maiores. Tenetur a officiis alias eum facilis.
+            </p>
+            <a id="slide-pool-less">Less</a>
+          </div>
         </div>
       </div>
     </div>
