Dealing with the toggle navbar liste thing

--- a/index.html
+++ b/index.html
@@ -27,9 +27,12 @@
         <div class="container">
             <a href="index.html">Hotello</a>
             <nav>
-                <i class="fas fa-bars toggle-menu"></i>
-                <ul>
-                    <li ><a class="active" href="#Home">Home</a></li>
+                <i class="fas fa-bars toggle-menu btn" ></i>
+                <ul class="nav-bar" id="nav-bar">
+                    <div class="btn-close btn">
+                      <i class="fas fa-times close-btn"></i>
+                    </div>
+                    <li ><a class="active" href="#">Home</a></li>
                     <li><a href="#tours">Destinations</a></li>
                     <li><a href="#services">Services</a></li>
                     <li><a href="#about">About</a></li>
@@ -567,7 +570,7 @@
     <div class="contact" id="contact">
       <h2 class="main-title">Contact US</h2>
       <div class="container">
-        <p>Directly contact us by completing the form below <br> (<span>*</span> <b> -</b>  mandatory fields)</p>
+        <p>Directly contact us by completing the form below <br> (<span>All</span> <b> -</b>  mandatory fields)</p>
         <form action="">
           <div class="flex-part">
             <input type="text" name="name" id="name" placeholder="Name" required>
@@ -598,10 +601,10 @@
        <div class="containertwo">
         <p>Made With &hearts; By DataSolution © 2023 </p>
         <ul>
-          <li><a href="#"><i class="fa-brands fa-youtube fa-fw fa-2x"></i></a></li>
-          <li><a href="#"><i class="fa-brands fa-facebook-f fa-fw fa-2x"></i></a></li>       
-          <li><a href="#"><i class="fa-brands fa-instagram fa-fw fa-2x"></i></a></li>
-          <li><a href="#"><i class="fa fa-envelope-o fa-fw fa-2x"></i></a></li>
+          <li><a href="https://www.youtube.com/channel/UCR6CQB5LzsbW46wILun1xAQ" target="_blank"><i class="fa-brands fa-youtube fa-fw fa-2x"></i></a></li>
+          <li><a href="https://www.facebook.com/profile.php?id=100092171379172" target="_blank"><i class="fa-brands fa-facebook-f fa-fw fa-2x"></i></a></li>       
+          <li><a href="#"><i class="fa-brands fa-instagram fa-fw fa-2x" target="_blank"></i></a></li>
+          <li><a href="https://mail.google.com/mail/u/1/?view=cm&fs=1&to=datasolution1001@gmail.com&tf=1" target="_blank"><i class="fa fa-envelope-o fa-fw fa-2x" target="_blank"></i></a></li>
 
 
         </ul>
