some front end corrections

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
                     <div class="btn-close btn">
                       <i class="fas fa-times close-btn"></i>
                     </div>
-                    <li ><a class="active" href="#">Home</a></li>
-                    <li><a href="#tours">Destinations</a></li>
-                    <li><a href="#services">Services</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li ><a class="active" href="#" id="link1">Home</a></li>
+                    <li><a href="#tours" id="link2">Destinations</a></li>
+                    <li><a href="#services" id="link3">Services</a></li>
+                    <li><a href="#about" id="link4">About</a></li>
+                    <li><a href="#contact" id="link5">Contact</a></li>
                 </ul>
             </nav>
             <div class="phone">
