--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
                 action="reservation.html"
                 onsubmit="return validate()" 
                  >
-                    <input class="special-input" type="date" id="date1" required>
-                    <input class="special-input" type="date"  id="date2"required>
-                    <select class="special-input" name="persons" id="valuer" required>
+                    <input class="special-input" type="date" name="arr_date" id="date1" required>
+                    <input class="special-input" type="date" name="end_date"  id="date2"required>
+                    <select class="special-input" name="num_person" id="valuer" required>
                         <option value=""># of Person</option>
                         <option value="1">1</option>
                         <option value="2">2</option>
