--- a/reservation.html
+++ b/reservation.html
@@ -27,7 +27,7 @@
             <div class="content">
                 <div class="input-box">
                     <label for="name">Full Name</label>
-                    <input type="text" placeholder="Enter full name" name="name" required>
+                    <input type="text" placeholder="Enter full name" name="fullname" required>
                 </div>
                 <div class="input-box">
                     <label for="email">Email</label>
@@ -51,9 +51,9 @@
                 </div>
                 <span class="gender-title">Gender</span>
                 <div class="gender-category">
-                    <input type="radio" name="gender" id="male" required>
+                    <input type="radio" name="genre" id="male" required>
                     <label for="gender">Male</label>
-                    <input type="radio" name="gender" id="female" required>
+                    <input type="radio" name="genre" id="female" required>
                     <label for="gender">Female</label>
                 </div>
             </div>
