make the card flip with a click in the info div

--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@ const form = document.getElementById('form');
                   <h3>Gharelmelh</h3>
                   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
                 </div>
-                <div class="info">
-                  <a id="flip1">Read More</a>
+                <div class="info" id="flip1">
+                  <a >Read More</a>
                   <i class="fas fa-long-arrow-alt-right"></i>
                 </div>
               </div>
@@ -167,8 +167,8 @@ const form = document.getElementById('form');
                     consectetur. Dolore, quo?
                   </p>
                 </div>
-                <div class="info">
-                  <a id="flip-1">Read Less</a>
+                <div class="info" id="flip-1">
+                  <a >Read Less</a>
                   <i class="fas fa-long-arrow-alt-right"></i>
                 </div>
                 </div>
@@ -182,8 +182,8 @@ const form = document.getElementById('form');
                   <h3>Hammamet</h3>
                   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
                 </div>
-                <div class="info">
-                  <a id="flip2">Read More</a>
+                <div class="info" id="flip2">
+                  <a>Read More</a>
                   <i class="fas fa-long-arrow-alt-right"></i>
                 </div>
               </div>
@@ -206,8 +206,8 @@ const form = document.getElementById('form');
                     consectetur. Dolore, quo?
                   </p>
                 </div>
-                <div class="info">
-                  <a id="flip-2">Read Less</a>
+                <div class="info"  id="flip-2">
+                  <a>Read Less</a>
                   <i class="fas fa-long-arrow-alt-right"></i>
                 </div>
                 </div>
@@ -221,8 +221,8 @@ const form = document.getElementById('form');
                   <h3>Bizert</h3>
                   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
                 </div>
-                <div class="info">
-                  <a id="flip3">Read More</a>
+                <div class="info" id="flip3">
+                  <a >Read More</a>
                   <i class="fas fa-long-arrow-alt-right"></i>
                 </div>
               </div>
@@ -245,8 +245,8 @@ const form = document.getElementById('form');
                     consectetur. Dolore, quo?
                   </p>
                 </div>
-                <div class="info">
-                  <a id="flip-3">Read Less</a>
+                <div class="info" id="flip-3">
+                  <a>Read Less</a>
                   <i class="fas fa-long-arrow-alt-right"></i>
                 </div>
                 </div>
@@ -260,8 +260,8 @@ const form = document.getElementById('form');
                   <h3>Jerba</h3>
                   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
                 </div>
-                <div class="info">
-                  <a id="flip4">Read More</a>
+                <div class="info"  id="flip4">
+                  <a>Read More</a>
                   <i class="fas fa-long-arrow-alt-right"></i>
                 </div>
               </div>
@@ -284,8 +284,8 @@ const form = document.getElementById('form');
                     consectetur. Dolore, quo?
                   </p>
                 </div>
-                <div class="info">
-                  <a id="flip-4">Read Less</a>
+                <div class="info" id="flip-4">
+                  <a>Read Less</a>
                   <i class="fas fa-long-arrow-alt-right"></i>
                 </div>
                 </div>
@@ -299,8 +299,8 @@ const form = document.getElementById('form');
                   <h3>Chat Jrid</h3>
                   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
                 </div>
-                <div class="info">
-                  <a id="flip5">Read More</a>
+                <div class="info" id="flip5">
+                  <a>Read More</a>
                   <i class="fas fa-long-arrow-alt-right"></i>
                 </div>
               </div>
@@ -323,8 +323,8 @@ const form = document.getElementById('form');
                     consectetur. Dolore, quo?
                   </p>
                 </div>
-                <div class="info">
-                  <a id="flip-5">Read Less</a>
+                <div class="info" id="flip-5">
+                  <a>Read Less</a>
                   <i class="fas fa-long-arrow-alt-right"></i>
                 </div>
                 </div>
@@ -338,8 +338,8 @@ const form = document.getElementById('form');
                   <h3>Star Wars Location</h3>
                   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
                 </div>
-                <div class="info">
-                  <a id="flip6">Read More</a>
+                <div class="info" id="flip6">
+                  <a>Read More</a>
                   <i class="fas fa-long-arrow-alt-right"></i>
                 </div>
               </div>
@@ -362,8 +362,8 @@ const form = document.getElementById('form');
                     consectetur. Dolore, quo?
                   </p>
                 </div>
-                <div class="info">
-                  <a id="flip-6">Read Less</a>
+                <div class="info"  id="flip-6">
+                  <a>Read Less</a>
                   <i class="fas fa-long-arrow-alt-right"></i>
                 </div>
                 </div>
@@ -377,8 +377,8 @@ const form = document.getElementById('form');
                   <h3>Ribat Sousa</h3>
                   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
                 </div>
-                <div class="info">
-                  <a id="flip7">Read More</a>
+                <div class="info" id="flip7">
+                  <a>Read More</a>
                   <i class="fas fa-long-arrow-alt-right"></i>
                 </div>
               </div>
@@ -401,8 +401,8 @@ const form = document.getElementById('form');
                     consectetur. Dolore, quo?
                   </p>
                 </div>
-                <div class="info">
-                  <a id="flip-7">Read Less</a>
+                <div class="info" id="flip-7">
+                  <a>Read Less</a>
                   <i class="fas fa-long-arrow-alt-right"></i>
                 </div>
                 </div>
@@ -416,8 +416,8 @@ const form = document.getElementById('form');
                     <h3>Cap Serat Bizert</h3>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
                   </div>
-                  <div class="info">
-                    <a id="flip8">Read More</a>
+                  <div class="info" id="flip8">
+                    <a>Read More</a>
                     <i class="fas fa-long-arrow-alt-right"></i>
                   </div>
                 </div>
@@ -441,8 +441,8 @@ const form = document.getElementById('form');
                   </p>
                 </div>
                 
-                <div class="info">
-                  <a id="flip-8">Read Less</a>
+                <div class="info" id="flip-8">
+                  <a>Read Less</a>
                   <i class="fas fa-long-arrow-alt-right"></i>
                 </div>
               </div>
